# ba_spheretracer

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  Spheremarcher  imgui.ini  notes.notes
dependency/glfw/: Makefile
dependency/glfw/src/: Makefile
dependency/imgui/examples/example_glfw_opengl3/: .main.cpp.kate-swp
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile
lib/: libGLEWd.so.2.1.0
res/meshes/: amo_broken.off  tree2.mtl
res/scenes/: csg.sce  test.sce  title.sce
res/shaders/: csg.fragment  csgShader.fragment  firstPassShader.fragment  marching.fragment  marching.vertex  offScreenShader.fragment  performanceTest.fragment  screenShader.fragment  sdfCopy.compute  sdfGenerator.compute  spheretracing.fragment  spheretracing.vertex  test.fragment  title.fragment  titleScene.fragment
src/: Spheremarcher.cpp  Spheremarcher.h  Spheretracer.cpp  Spheretracer.h  main.cpp
src/utils/: Application.cpp  Application.h  Camera.cpp  Camera.h  FrameBuffer.cpp  FrameBuffer.h  GLUtils.h  Material.cpp  Material.h  PrimitiveScene.cpp  PrimitiveScene.h  SDFGenerator.cpp  SDFGenerator.h  SDField.cpp  SDField.h  Shader.cpp  Shader.h  TextureSampler.cpp  TextureSampler.h  Window.cpp  Window.h
src/utils/raytracing/: Mesh.cpp  Mesh.h  Ray.h
